# coalesce-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  search-index.js
coalesce/: enum.Coalesce0.html  enum.Coalesce1.html  enum.Coalesce2.html  enum.Coalesce3.html  enum.Coalesce4.html  enum.Coalesce5.html  enum.Coalesce6.html  enum.Coalesce7.html  enum.Coalesce8.html  enum.Coalesce9.html  index.html  macro.coalesce!.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js
src/: lib.rs
src/coalesce/: lib.rs.html
